--- a/src/components/header-component/index.css
+++ b/src/components/header-component/index.css
@@ -1,49 +1,103 @@
-.mainParentBg{
-    display: flex;
+.mainParentBg {
+  display: flexbox;
+  background-color: rgb(245, 236, 224);
+
+  width: 100vw;
+  height: 50%;
+}
+@media screen and (max-width: 992px) {
+  .mainParentBg {
+    /* display: block; */
     background-color: rgb(245, 236, 224);
     justify-content: center;
     align-items: center;
     flex-direction: column;
     width: 100vw;
-    height: 400px;
+    height: 330px;
+  }
 }
-.headerTextView{
+@media screen and (max-width: 600px) {
+  .mainParentBg {
+    /* display: block; */
+    background-color: rgb(245, 236, 224);
+    justify-content: center;
     align-items: center;
-    justify-content: center;
-    justify-content: center;
-    display: flex;
-    
+    flex-direction: column;
+    width: 100vw;
+    height: 200px;
+  }
 }
-.headerText{
-    font-size: 60px;
-    color:#333333;
-    font-weight: bold;
-    align-content: center;
-    display: flex;
-    justify-content: center;
-    width: auto;
+.headerTextView {
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  padding-top: 20px;
+}
+.headerText {
+  font-size: 4vw;
+  color: #333333;
+  font-weight: bold;
+  align-content: center;
+  display: flex;
+  justify-content: center;
+  width: auto;
 }
 
-.logoParentView {
-  justify-content: space-evenly;
-  align-items: center;
-  width: 100vw;
-  height: 20%;
+.logoParentView::after {
+  width: 100%;
+  justify-content: space-between;
+  align-content: center;
   display: flex;
- 
 }
-.logo1 {
-  width: 20vw;
-  display: flex;
-  height: 120px;
+@media screen and (max-width: 992px) {
+  .logoParentView {
+  }
 }
-.logo2 {
-  width: 20vw;
-  display: flex;
-  height: 120px;
+@media screen and (max-width: 600px) {
+  .logoParentView {
+  }
 }
-.logo3 {
-  width: 15vw;
-  height: 120px;
-  display: flex;
+
+.image {
+  width: 60%;
+  height: 40vh;
+  align-self: center;
+}
+
+@media screen and (max-width: 992px) {
+  .image {
+    width: 100%;
+    height: 22vh;
+    align-self: center;
+  }
+}
+
+/* On screens that are 600px wide or less, make the columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .image {
+    width: 80vw;
+    height: 12vh;
+    align-self: center;
+  }
+}
+
+/* Create four equal columns that floats next to each other */
+.logo {
+  width: 100%;
+}
+/* On screens that are 992px wide or less, go from four columns to two columns */
+@media screen and (max-width: 992px) {
+  .logo {
+    width: 100%;
+  }
+}
+
+/* On screens that are 600px wide or less, make the columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .logo {
+    width: 100%;
+  }
+}
+.carousel {
+  width: 100%;
 }
