--- a/src/components/profile-component/index.css
+++ b/src/components/profile-component/index.css
@@ -4,32 +4,161 @@
   align-items: center;
   margin-top: 5%;
   margin-bottom: 5%;
+  width: 100vw;
 }
 .imageParentView {
   align-items: center;
   display: flex;
   flex-direction: column;
 }
+
+/* facilitor */
 .facilitatorText {
-  font-size: 1.4rem;
+  font-size: 1.2vw;
   font-family: Arial, Helvetica, sans-serif;
-}
-.profileTextParent {
-  flex-direction: column;
-  margin-left: 2%;
+  padding-top: 10px;
+  font-weight: bold;
 }
 
+@media screen and (max-width: 992px) {
+  .facilitatorText {
+    font-size: 1vw;
+    font-family: Arial, Helvetica, sans-serif;
+    padding-top: 10px;
+    font-weight: bold;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .facilitatorText {
+    font-size: 0.6rem;
+    font-family: Arial, Helvetica, sans-serif;
+    padding-top: 10px;
+    font-weight: bold;
+  }
+}
+
+.profileTextParent {
+  flex-direction: column;
+  margin-left: 5%;
+}
+/* name text */
 .nameText {
   font-size: 2rem;
   font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
 }
+
+@media screen and (max-width: 992px) {
+  .nameText {
+    font-size: 1.5rem;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+  }
+}
+@media screen and (max-width: 600px) {
+  .nameText {
+    font-size: 1.1rem;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+  }
+}
+
+/* designationText text */
 .designationText {
-  font-size: large;
+  font-size: 1.5rem;
   font-weight: bold;
   font-family: Arial, Helvetica, sans-serif;
+  padding-top: 10px;
+  padding-bottom: 20px;
 }
-.profilePictureView {
-  width: 200px;
-  height: 200px;
+
+@media screen and (max-width: 992px) {
+  .designationText {
+    font-size: 1rem;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+    padding-top: 10px;
+    padding-bottom: 20px;
+  }
+}
+@media screen and (max-width: 600px) {
+  .designationText {
+    font-size: 0.6rem;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+    padding-top: 10px;
+    padding-bottom: 20px;
+  }
+}
+
+.pView {
+  width: 11vw;
+  height: 20vh;
   border-radius: 210px;
+}
+
+@media screen and (max-width: 1392px) {
+  .pView {
+    width: 100%;
+    height: 20vh;
+    border-radius: 210px;
+  }
+}
+@media screen and (max-width: 802px) {
+  .pView {
+    width: 100%;
+    height: 20vh;
+    border-radius: 210px;
+  }
+}
+@media screen and (max-width: 600px) {
+  .pView {
+    width: 100%;
+    height: 20vh;
+    border-radius: 210px;
+  }
+}
+@media screen and (max-width: 200px) {
+  .pView {
+    width: 100%;
+    height: 20vh;
+    border-radius: 210px;
+  }
+}
+
+/* @media screen and (max-width: 400px) {
+  .profilePictureView {
+    width: 30vw;
+    height: 14vh;
+    border-radius: 210px;
+  }
+} */
+.beneficiariesText {
+  align-content: center;
+  justify-content: center;
+  display: flex;
+  font-size: 2rem;
+  font-weight: bold;
+  padding-top: 70px;
+}
+@media screen and (max-width: 992px) {
+  .beneficiariesText {
+    align-content: center;
+    justify-content: center;
+    display: flex;
+    font-size: 1.5rem;
+    font-weight: bold;
+    padding-top: 70px;
+  }
+}
+@media screen and (max-width: 600px) {
+  .beneficiariesText {
+    align-content: center;
+    justify-content: center;
+    display: flex;
+    font-size: 1rem;
+    font-weight: bold;
+    padding-top: 70px;
+  }
 }
